--- a/Hojadevida.html
+++ b/Hojadevida.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<title>Sample page</title>
+			<title>CV Julian Rincon</title>
+			<style type="text/css">
+				body {
+					color: purple;
+					background-color: #d8da3d }
+				</style>
 			<meta charset="UTF-8">
 		</head>
 	<body>
 		<h1 align="center">Julian David Rincon</h1>
+		<center>
+		<span style > <img src="images/Foto julian.png">
+		</center>
 		<h2 align="center">Ingenieria de sistemas</h2>
 		
 		<p>Soy una persona curiosa, motivada a aprender cada día más, 
@@ -13,7 +21,7 @@
 		ya que considero que es allí donde verdaderamente se aprende. 
 		Así que estoy buscando una oportunidad de crecer en todo ámbito 
 		haciendo del trabajo una escuela y de todos aquellos con los que 
-		pueda compartir mis maestros.  .</p>
+		pueda compartir mis maestros.</p>
 		
 		<h3> <b> Habilidades e idiomas </b> </h3>
 		<em> <ul>
@@ -33,9 +41,31 @@
 		<em> <ul>
 			<li> <p> <b> Bachiller Técnico Con Especialidad en Electricidad y Electrónica </b> </p>
 				<p> Instituto Técnico Industrial de Zipaquirá, SENA. Sena </p> </li>
-			<li>Trabajo en equipo</li>
-			<li>Inteligecia emocional</li>
-			<li>Comunicacion eficaz</li>
+			<li> <p> <b> Ingeniería de Sistemas (Actualmente cursando: 5 semestre) </b> </p>
+				<p> Universidad Distrital Francisco José de Caldas. </p> </li>
 		</ul>
+		
+		<h3> <b> Experiencia profesional </b> </h3>
+		<p> <b> <em> Tennis </em> </b> </p>
+		<p> 29 de Noviembre 2019 - 24 de Diciembre 2019 </p>
+		
+		<ul>
+			<li>Administracion del dinero, caja</li>
+			<li>Atencion al cliente</li>
+			<li>Apertura y cierre</li>
+		</ul>
+		
+		<h3> <b> Experiencia </b> </h3>
+		<ul>
+			<li>Participe en el programa de conciliación escolar 
+				HERMES en el Instituto Técnico Industrial, en donde aprendí sobre confianza, imparcialidad,
+				escuchar, paciencia y discreción, gracias a ser un mediador</li>
+			<li>Trabaje en diversos proyectos grupales en los que la cantidad que lo conformaban variaba 
+				desde 3 hasta 40 personas, y en todos ellos logre trabajar e incluso en gran parte destacar
+				frente a profesores, directivos entre otros.</li>
+			<li>He destacado en diversas materias tanto escolares como universitarias, como consecuencia me gradué
+				con medalla de excelencia en el bachillerato.</li>
+		</ul>
+		<center> <h3> <a href="Hojadevida1.html"> Siguiente CV</a> </h3> </center>
 	</body>
 </html>
